refactor: implement find all breeds with pagination